html pages for create and lists completed

--- a/src/main/resources/static/createStudent.html
+++ b/src/main/resources/static/createStudent.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8" content="application/json">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Create/Update Student</title>
 </head>
 <body>
@@ -11,49 +13,55 @@
         Create a new Student
     </h1>
     <hr>
-    <form id="studentForm" name="studentForm" action="/student/create" method="post" enctype="a">
+    <form id="studentForm" class="studentForm" name="studentForm" action="/student/create" method="post" enctype="a">
         <div class="form-group border rounded p-3">
 
             <label for="username">Username</label>
             <input  type="text" class="form-control mt-2" id="username"
-                   placeholder="Username" name="username"  maxlength="50" >
+                   placeholder="Username" name="username"  maxlength="50" required><br>
 
             <label class="mt-2" for="firstName">First Name</label>
             <input  type="text" class="form-control mt-2" id="firstName"
-                   placeholder="First Name" name="firstName" minlength="1" maxlength="50" >
+                   placeholder="First Name" name="firstName" minlength="1" maxlength="50" required><br>
 
             <label class="mt-2" for="lastName">Last Name</label>
             <input  type="text" class="form-control mt-2" id="lastName"
-                   placeholder="Last Name" name="lastName"  >
+                   placeholder="Last Name" name="lastName"  required><br>
 
             <label class="mt-2" for="password">Password</label>
             <input  type="text" class="form-control mt-2" id="password"
-                    placeholder="Password" name="password" min="1" >
+                    placeholder="Password" name="password" min="1" required><br>
 
             <label class="mt-2" for="role">Role</label>
             <input  type="text" class="form-control mt-2" id="role"
-                    placeholder="Role" name="role" min="2" >
+                    placeholder="Role" name="role" min="2" required><br>
 
             <label class="mt-2" for="interests">Interests</label>
-            <input  type="text" class="form-control mt-2" id="interests"
-                    placeholder="Interests" name="interests" min="2" >
+            <br>
+            <textarea rows = "5" cols = "60" name = "interests" id="interests" placeholder="Enter interests here...Separated by comma (,)">
+            </textarea><br>
 
             <label class="mt-2" for="birthDate">Birth Date</label>
             <input type="date" class="form-control" id="birthDate"
-                   placeholder="Birth Date" name="birthDate" >
+                   placeholder="Birth Date" name="birthDate" ><br>
 
             <label class="mt-2" for="home">Home Address</label>
             <input  type="text" class="form-control mt-2" id="home"
-                    placeholder="Home Address" name="home" min="2" >
+                    placeholder="Home Address" name="home" min="2" ><br>
 
             <label class="mt-2" for="profilePicture">Profile Picture</label>
-            <input type="text" class="form-control" id="profilePicture"
-                   placeholder="Profile Picture" name="profilePicture" min="1" >
+            <input type="file" accept="image/*" capture class="form-control" id="profilePicture"
+                   placeholder="Profile Picture" name="profilePicture" min="1" ><br>
         </div>
     </form>
     <div class="text-center">
-        <button type="submit" value="Submit" class="btn" form="studentForm">Create Student</button>
+        <button onclick="clickyClick();" type="submit" value="Submit" id="submit" class="btn" form="studentForm">Create Student</button>
     </div>
 </div>
 </body>
 </html>
+<script>
+    function clickyClick() {
+       document.getElementById("interests").value.split(",");
+    }
+</script>
