--- a/src/main/resources/static/createTeacher.html
+++ b/src/main/resources/static/createTeacher.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" content="application/json">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Create/Update Teacher</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
         </div>
     </form>
     <div class="text-center">
-        <button type="submit" value="Submit" class="btn" form="teacherForm">Create Teacher</button>
+        <button  type="submit" value="Submit" class="btn" form="teacherForm">Create Teacher</button>
     </div>
 </div>
 </body>
