--- a/src/main/resources/static/assignmentsList.html
+++ b/src/main/resources/static/assignmentsList.html
@@ -18,6 +18,7 @@
         <th>Last updated</th>
         <th>Description</th>
         <th>Course Code</th>
+        <th>Action</th>
     </tr>
     </thead>
     <tbody>
@@ -52,6 +53,7 @@
                                     "<td>"+ data[i].dateTimePosted+"</td>" +
                                     "<td>"+data[i].description+"</td>" +
                                     "<td>"+data[i].courseCode+"</td>" +
+                                    "<td><button id='delete''>Delete</button></td>" +
                                     "</tr>";
                             }
                         }
