--- a/src/main/resources/static/coursesList.html
+++ b/src/main/resources/static/coursesList.html
@@ -16,6 +16,7 @@
         <th>Course Code</th>
         <th>Course Name</th>
         <th>Description</th>
+        <th>Action</th>
     </tr>
     </thead>
     <tbody>
@@ -48,6 +49,7 @@
                                     "<td>"+data[i].courseCode+"</td>" +
                                     "<td>"+data[i].name+"</td>" +
                                     "<td>"+data[i].description+"</td>" +
+                                    "<td><button id='delete''>Delete</button></td>" +
                                     "</tr>";
                             }
                         }
