--- a/src/main/resources/static/teachersList.html
+++ b/src/main/resources/static/teachersList.html
@@ -18,6 +18,7 @@
         <th>Last Name</th>
         <th>Password</th>
         <th>Role</th>
+        <th>Action</th>
     </tr>
     </thead>
     <tbody>
@@ -52,6 +53,7 @@
                                     "<td>"+data[i].lastName+"</td>" +
                                     "<td>"+data[i].password+"</td>" +
                                     "<td>"+data[i].role+"</td>" +
+                                    "<td><button id='delete''>Delete</button></td>" +
                                     "</tr>";
                             }
                         }
